@@ -1,4 +1,4 @@
-*.sw[po]
+*.sw[nop]
 *.o
 *.old
 *.orig
