@@ -1,7 +1,9 @@
 SET(EXECUTABLES 
     cmake-fedora-fedpkg 
     cmake-fedora-koji 
-    cmake-fedora-newprj 
+    cmake-fedora-newprj
+    cmake-fedora-pkgdb 
+    cmake-fedora-zanata
     koji-build-scratch
 )
 
